<resources>
    <string name="app_name">Split</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_contacts">Contacts</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_groups">Groups</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_members">AddMembersActivity</string>
    <string name="title_activity_ledger">LedgerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_lable_addmember">Add member</string>
    <string name="button_lable_done">Done</string>
    <string name="hint_add_member">Enter member name</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="group_row_view">Group</string>
    <string name="contact_row_view">Contact</string>
    <string name="groupname">Group Name</string>
    <string name="title_activity_group">Group</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="members">Members</string>
    <string name="expenses">Expenses</string>

    <string name="enter_contact">Contact Name</string>
    <string name="hint_add_contact">Enter contact name</string>
    <string name="save_contact">Save</string>
    <string name="enter_group">Group Name</string>
    <string name="hint_add_group">Enter group name</string>
    <string name="save_group">Save</string>
    <string name="enter_member">Member name</string>
    <string name="save_member">Save</string>
    <string name="enter_expense">Expense</string>
    <string name="hint_add_expense">Enter title</string>
    <string name="choose_member">Member:</string>
    <string name="save_expense">save</string>
    <string name="hint_add_expense_payee">Enter name</string>
    <string name="hint_add_expense_amount">Enter amount</string>
    <string name="hint_add_contact_lastName">Enter last name</string>
    <string name="hint_add_contact_firstName">Enter first name (mandatory)</string>
    <string name="hint_add_contact_email">Enter email</string>
    <string name="member_row_view">Member First Name</string>
    <string name="member_row_view_lastname">Member Last Name</string>

    <string name="textView_expense_item">Expense</string>
    <string name="textView_amount_item">Amount</string>
    <string name="textView_payer_item">Member name</string>
    <string name="email">Email</string>
    <string name="description_image_view_contact_name">Contact name</string>
    <string name="description_image_viewmember_name">Member name</string>
    <string name="amount">Amount</string>
    <string name="expense">Expense</string>
    <string name="description_image_view_delete_expense">Delete expense</string>
    <string name="logo_background_image">Logo background image</string>
    <string name="contact_image">Contact image</string>
    <string name="delete_contact_button">Delete contact button</string>
    <string name="edit_expense_button">Edit expense button</string>
    <string name="delete_expense_button">Delete expense button</string>
    <string name="delete_group_button">Delete group button</string>
    <string name="group_item">Group item</string>
    <string name="group_member">Group member</string>
    <string name="choose_contact">Choose member : </string>
    <string name="_0_00">0.00</string>
    <string name="full_screen_image">Full screen image</string>
    <string name="sign_in">SIGN IN</string>
    <string name="description_navigation_drawer_image">Navigation drawer image</string>
    <string name="action_menu_edit">Edit</string>
    <string name="action_menu_delete">Delete</string>
    <string name="title_activity_expense">Expense</string>
    <string name="title_activity_member">Member</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_detail">Detail</string>
    <string name="total_share">Share 300 sek</string>
    <string name="balance">Balance -250 sek</string>
    <string name="dialog_exit_button">exit</string>
    <string name="dialog_info_content">Split is a free app for family, friends and roommates. Split shows you a tally of who owes how much, by adding multiple payees and splitting your expenses. No more lost receipts or disagreements about the balance. It is especially great for travellers, it helps you to stay on top of your expenses and settle up in an easy, relaxed way. </string>
    <string name="sek">SEK</string>
    <string name="done_button_text_settleup">Done</string>
    <string name="settleup_button_text">Settle Up</string>

</resources>
