<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tile"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:textStyle="italic"
                android:textSize="18sp"
                android:text="@string/enter_group"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/groupItem"
                android:layout_below="@id/tile"
                android:layout_width="match_parent"
                android:hint="@string/hint_add_group"
                android:layout_height="wrap_content" />


            <Button
                android:id="@+id/saveGroupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/groupItem"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/save_group"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>