<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout_item_expense"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:gravity="center_vertical">

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView_item_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_money_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/edit_expense_button"
                android:paddingRight="10dp"
                android:scaleType="center"
                android:layout_weight="0"
                app:srcCompat="@drawable/money_expenses" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_expense_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/textView_expense_item" />

            <TextView
                android:id="@+id/textView_payer_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:text="@string/textView_payer_item" />
        </LinearLayout>

            <TextView
                android:id="@+id/textView_amount_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:paddingEnd="20dp"
                android:text="@string/textView_amount_item" />

            <ImageView
                android:id="@+id/imageView_edit_expense_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/edit_expense_button"
                app:srcCompat="@drawable/ic_mode_edit_black_24dp" />

            <ImageView
                android:id="@+id/imageView_delete_expense_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:contentDescription="@string/delete_expense_button"
                app:srcCompat="@drawable/ic_clear_black_24dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>