<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_dialog_add_member"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_dialog_add_member"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout_dialog_add_member"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_dialog_add_member"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:textStyle="italic"
                android:textSize="18sp"
                android:text="@string/enter_member"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/editText_dialog_add_member"
                android:layout_below="@id/textView_dialog_add_member"
                android:layout_width="match_parent"
                android:inputType=""
                android:hint="@string/hint_add_member"
                android:layout_height="wrap_content"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:layout_alignBottom="@id/button_dialog_add_member_save"
                android:layout_below="@+id/editText_dialog_add_member"
                android:layout_marginBottom="61dp">

                <TextView
                    android:id="@+id/textView_choose_contact"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:hint="@string/choose_contact"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_choose_contact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <Button
                android:id="@+id/button_dialog_add_member_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText_dialog_add_member"
                android:layout_marginTop="88dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/save_member"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>