<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout_item_group"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:gravity="center_vertical">

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView_item_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!-- dummy ImageView - to be changed in future -->
            <ImageView
                android:id="@+id/imageView_group_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:contentDescription="@string/group_item"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_group_black_24dp" />

            <TextView
                android:id="@+id/textView_group_item"
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:paddingEnd="20dp"
                android:text="@string/group_row_view"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/textView_group_item_expense_total_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:text="Balance"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_group_item_expense_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:paddingEnd="5dp"
                        android:textStyle="bold"
                        android:text="@string/amount"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView_group_item_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:text="@string/sek"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>


            <ImageView
                android:id="@+id/imageView_delete_group_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="0"
                android:contentDescription="@string/delete_group_button"
                app:srcCompat="@drawable/ic_clear_black_24dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>