<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout_item_group_member"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium">

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView_item_group_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!-- dummy ImageView - to be changed in future -->
            <ImageView
                android:id="@+id/imageView_item_group_member"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:contentDescription="@string/group_member"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <TextView
                android:id="@+id/textView_item_group_member"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/member_row_view"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>